léto 2015, po švýcarsku a itálii

--- a/voda.tex
+++ b/voda.tex
@@ -450,7 +450,7 @@ Přejíždíme na Mastallone, spíme na parkovišti u kapličky nad Landwasserem
 \info[Mastallone]{6.5.}{vyší střední}
 \usek{spodní}
 
-Nasedáme kousek nad mixérem na parkovišti ($N45.854696^\circ E8.231881^\circ$). Na mixéru dáváme pár koleček, fotíme a točíme, všechno v pohodě. Potom je pár peřejí 3-4, všechno jedeme na oči, až ke vstupence do kaňonu. Tady prohlížíme a jistíme, s Kubou se dohodnem, že to pojedem, já jedu první. Důležitý je trefit pravou lajnu u rozdělováku, vlevo je sifon. Válci dole už nevěnuju takovou pozornost, příde mi, že v tý rychlosti by neměl bejt problém ho přejet. Pravou lajnu sice trefuju, ale před poslednim válcem mě to rozhodí, eště to stihnu najet hodně na pravo po skále, ale už nestíhám srovnat náklon a do válce padám bokem a zůstávám v něm. Po třech eskymácích to docela rychle vzdávám, moc se toho vymyslet nedá. Šuhy mě naštěstí na první pokus trefuje házečkou a hned sem z vody venku. Pádlo odlovim hned, pro loď musim skočit na žabáka. Nakonec z vracáku odlovíme házečku a jednu pěnu ze špičky, o druhou sem přišel. Časem nacházíme i loďák s lékárničkou. 
+Nasedáme kousek nad mixérem na parkovišti ($N45.854696^\circ~E8.231881^\circ$). Na mixéru dáváme pár koleček, fotíme a točíme, všechno v pohodě. Potom je pár peřejí 3-4, všechno jedeme na oči, až ke vstupence do kaňonu. Tady prohlížíme a jistíme, s Kubou se dohodnem, že to pojedem, já jedu první. Důležitý je trefit pravou lajnu u rozdělováku, vlevo je sifon. Válci dole už nevěnuju takovou pozornost, příde mi, že v tý rychlosti by neměl bejt problém ho přejet. Pravou lajnu sice trefuju, ale před poslednim válcem mě to rozhodí, eště to stihnu najet hodně na pravo po skále, ale už nestíhám srovnat náklon a do válce padám bokem a zůstávám v něm. Po třech eskymácích to docela rychle vzdávám, moc se toho vymyslet nedá. Šuhy mě naštěstí na první pokus trefuje házečkou a hned sem z vody venku. Pádlo odlovim hned, pro loď musim skočit na žabáka. Nakonec z vracáku odlovíme házečku a jednu pěnu ze špičky, o druhou sem přišel. Časem nacházíme i loďák s lékárničkou. 
 
 Zbytek kaňonu je poměrně v pohodě, ale těžší, než se zdá seshora ze silnice. První peřej se jede celá vpravo, druhá peřej sou tři válce, nejlehčí lajna je všechno vpravo. První válec je zadarmo, druhej se dá po stranách, ve středu ho člověk jet nechce. Poslední je lepší jet vpravo, ale dá se kdekoliv. Potom už je jen volej. Zajímavý místa jsou až pod jezem, vlevo je sifon přes půl řeky, jedeme vpravo. Ke konci je solidní kaňon, prohlížíme, ale většinu přenášíme, v nájezdu je šutr. Vystupujeme ve Varallu za mostama vlevo (dobrej výstup po schodech).
 
@@ -515,4 +515,225 @@ Večer přejíždíme na Lammer, spaní na nasedačce je ale plný (WW ženy), t
 Ráno dáváme 2 jízdy na vodopádu na Tauglu, je trochu vyšší voda, přes levou část vodopádu jde trochu vody. První jízda super, docela trefim boof a dávám to v pohodě. Druhou jízdu moc netrefuju, dole eskymuju a končim ve vracáku vlevo hned u vodopádu. Naštěstí se z toho dá v pohodě vyjet. Vodopád je hodně zábavnej a je o trochu vyšší, než se zdá ze břehu.
 
 
-\end{document}
+
+\akce{Inny a okolí}
+\datum[20.6. - 22.6.]
+Víťa, Mišu, Alča, Vojta, Vašek, Plukovník, Lovec
+
+\info[Inn]{20.6.}{$260cm$ - Kajetansbrücke}
+\usek{Tössener schlucht}
+
+Pohodička na rozpádlování, teče to, ale vody by mohlo bejt víc.
+
+
+\info[Inn]{20.6.}{$42m^3/s$ Tarasp}
+\usek{Giarsun + Ardez}
+
+Má to moc hezkou vodu, asi takovej skoro optimální pohodovej stav. Jedem všechno na oči, krom řezníka, kterýho přenášíme celýho. Dá se to jet cca do půlky, ale docela to tam teče a dá to trochu zabrat, dostat se k levýmu břehu. Jinak je to všechno v pohodě, krom peřeje hned za řezníkem, kde ta levá lajna neni úplně optimální, jede se tam přes velký vejvary a já tam zvedám. Většina jede lajnu u pravý strany, kde se to dá jet asi přes 1m boof.
+
+
+\info[Inn]{21.6.}{$28m^3/s$ Tarasp}
+\usek{Giarsun + Ardez}
+
+Jedeme druhou jízdu, je znatelně míň vody, ale pořád je to pohodový. Tentokrát jedeme celou peřej před řezníkem, cca do půlky přenášky, kterou to výrazně urychlí. Jedeme jenom já, Víťa a Vašek, všichni zastavujem v pohodě, ale v posledním stupni to chce jet spíš přes kicker směrem doleva, ostatní jedou víc na střed a pak musí k levýmu břehu docela máknout.
+
+
+\info[Pitzbach]{21.6.}{$53cm$ Wenns}
+\usek{Standardstrecke}
+
+Pitzbach má super stav, asi skoro optimální. Bohužel už je hotovej novej jez, kterej si značnou část vody veme. Pod jezem to odpovídá tak stavu 40cm, takže se to dá dojet, ale je to velká šutrovačka. Nicméně hořejšek je OK, já teda najíždim zatáčku dost bídně a dole zvedám, opět mě zvrhá šutr u pravý strany.  Zbytek docela v pohodě. Potom za peřerjí s jazykem vlevo sou stromy, musí se jet úplně u pravýho břehu. Potom jedem klasickej skok, všichni na pohodu, za tohodle stavu je to fakt super. Za zatáčkou pod skokem na nás vykouknou 2 velký stromy spadlý přes řeku, naštěstí jsou vidět včas, vklidu zastavujeme a přenášíme. Potom už se jede na pohodu až k jezu, poslední peřej před jezem je už trochu zalitá, dá se jet na obou stranách od rozdělováku. Jez přenášíme vpravo. Pak už je to bída.
+
+
+\info[Venter Ache]{21.6.}{$215cm$ Tumpen}
+\usek{Spodní}
+
+Venter za tohodle stavu je super, vůbec to eště neni těžký, ale teče to kontinuálně, neni potřeba se vyhejbat šutrům. Lajny sou ale v podstatě stejný jako za menších stavů, všechno v pohodě jetelný.
+
+
+\info[Otz]{21.6.}{$215cm$ Tumpen}
+\usek{lesní}
+
+Ještě stíháme jednu rychlou lesní, za týhle vody už to má docela sílu, trochu mě to překvapuje. Přijde mi to o trochu těžší, než ten spodní Venter. Vašek si tam asi 1km od startu zaplave, naštěstí docela v dobrym místě, rychle se dostává ke břehu a hned chytáme i loď. Jinak jedeme bez větších problémů, je to fakt rychlovka, jedem asi půl hodiny.
+
+
+\akce{Isel a Itálie}
+\datum[3.8. - 7.8.]
+Kuba, Štěpán, Pavel
+
+V Praze máme dobrej start, v Budějcích přesedáme do našeho auta a v jednu už sme na kempovišti na Iselu pod kataraktem.
+
+\info[Isel]{3.8.}{$300cm$ Lienz}
+\usek{pod kataraktem}
+
+Jedeme 3x s pendlem.
+
+
+\info[Isel]{3.8.}{$112cm$ Hinterbichl}
+\usek{Horní}
+
+Jedeme 2x s pendlem
+
+\info[Isel]{4.8.}{$290cm$ Lienz}
+\usek{pod kataraktem}
+
+Jedeme 4x s pendlem.
+
+Prohlížíme tunel, ale 56 je moc. Koukáme i na wasserfal strecke, ale taky moc.
+
+\info[Defereggenbach]{4.8.}{$58cm$ Hopfgarten}
+\usek{pod kataraktem}
+
+Jedeme 2x s pendlem.
+
+\info[Ahrnbach]{5.8.}{$33.4m^3/s$ St. Georgen / $105cm$ vodočet na vysedačce}
+\usek{Schloss}
+
+Prohlížíme Reinbach, ale příde nám dost vody, v nájezdu je docela solidní válec.
+
+\info[Rienz]{6.8.}{placák pod přehradou na úrovni hladiny ??}
+\usek{Rienzschlucht}
+
+Asi minimální průtok z přehrady.... Kluci jedou až do Brixenu, jedou 3.5h, s tim, že hodinu strávíme u nejtěžšího místa. K tomu dorazili po necelý hodině od přehrady, cca 1km.
+
+
+\info[Eisack]{6.8.}{$??$}
+\usek{todo}
+
+Poslední den jedeme jernom lammer, salzach má nakoupeno (145 je fakt moc) a Taugl je suchej.
+
+
+\clearpage
+\akce{Rakousko, Švýcarsko}
+\datum[11.8. - 19.8.]
+
+
+Kuba, Šuhy, Sosan, Ježura, Dominika
+
+
+Vyjíždíme až v sobotu, protože kluci přijeli do Budějc až po půlnoci. Kousek za hranicema pícháme pneumatiku, takže super start. Pozdějc v Loferu zjišťujeme, že i druhá zadní pneumatika je pekelně sjetá (na vnitřní straně čouhaj dráty), takže máme strach s tim někam dál jet, protože už nemáme rezervu. Naštěstí v neděli seženeme nějakýho týpka, co nám pneumatiku vymění, dává nám nějakou starou ojetou, ale na dojezd to snad bude stačit. Za práci si řekne 30E, za pneu nic. Celkově vydařenej začátek.
+
+
+\info[Saalach]{11.8.}{$28cm$ Unterjettenberg}
+\usek{Lofer}
+
+Na rozjetí jedeme Lofer za nižšího pohodovýho stavu. Všechno je to na pohodu, nejtěžší část - trojkombinaci peřejí prohlížíme, ale je to docela na pohodu. V nájezdu je šikmej válec, je dobrý se dostat co nejvíc doleva. Potom je malej skok s válcem, jede se u levý strany. Další peřej je boof přes šutr u pravý strany, potom je lžíce, která se boofuje středem. Potom pokračujeme až k peřeji s pekelnym sifonem, tu jedeme úplně u pravý strany, aby jsme se sifonu v klidu vyhnuli. Nicméně druhou jízdu Honza na tu lajnu zapomíná a jede středem. Je tam malej boof přes šutr, ale neni to zas tak těžká lajna. Honza ale zazmatkuje a vyplave, jeho loď skončí přímo nad sifonem, on je naštěstí víc vpravo a proplave kolem. Loď nám dá trochu zabrat, ale nakonec jí vytáhneme skrz malou jeskyňku u břehu. Naštěstí je všechno OK.
+
+\cara
+Spíme u štěrkovny u Loferu $N47.538019^\circ~E12.726669^\circ$, protože se bojíme s autem jet někam dál. Nicméně spaní je tu super.
+
+
+\info[Saalach]{12.8.}{$28cm$ Unterjettenberg}
+\usek{Lofer}
+
+Ráno jedeme ještě jednou Lofer. Je to v pohodě, dokud se Šuhy nenechá i s Axiomem natlačit pod šutr a plave. Naštěstí všechno rychle odlovíme.
+
+
+\info[Otz]{12.8.}{$250cm$ Tumpen}
+\usek{spodní}
+
+Odpoledne jedeme $2\times$ nakoupenej spodní Ötz. První jízda je trochu opatrnější, nikdo to za podobnýho stavu nejel. Nicméně je to docela v klidu, jsou tam akorát velký vlny a rychlej proud, ale je to přehledný a všechno se dá objet. Před jezem se dá v klidu zastavit na pravý straně. Až do Innu je to super, dojezd po Innu je trochu nudnější, Inn je hodně zarovnanej. 
+
+\cara
+Spíme na vysedačce v Haimingu společně s budějovičákama (Radim).
+
+
+\info[Otz]{13.8.}{$235cm$ Tumpen}
+\usek{spodní}
+
+Ráno dáváme ještě jednou spodní Ötz, voda je znatelně nižší, ale charakter podobnej.
+
+
+\info[Inn]{13.8.}{$27m^3/s$ Tarasp}
+\usek{Giarsun + Ardez}
+
+Za tohodle stavu velká pohodička, jedeme bez problémů $2\times$. Druhou jízdu jedu jenom já s Ježurou, dáváme to za 57min.
+
+\cara
+Večer přejíždíme na Landquart, kde trochu hledáme spaní, ale nakonec spíme na vysedačce horního úseku. Řeka nemá vodu, takže ráno jedeme pryč. Cestou prohlížíme Medlsbach a Reuss, ale ani jedno nemá vodu. Reuss vypadá super, ale je tam několik přehrad, takže s průtokem je tam problém.
+
+Cesta vede přes 2 pasy, první má něco přes 2 tisíce, potom se eště musí na Furkapass, kterej má asi 2500. Cestou zabijeme většinu dne, jak kvůli pasům, tak při prohlížení úseků, který nakonec nejedeme.
+
+
+\info[Rhona]{14.8.}{$20-25m^3/s$ odhad, vyšší stav}
+\usek[kemp Grafschaft $N46.4553836^\circ~E8.225618^\circ$]{nádraží naproti Mühlbachu $N46.411470^\circ~E8.154963^\circ$}
+
+Řeka má docela nakoupeno, jedeme navečer a celej den bylo vedro. Začátek je pohodička na rozpádlování, cestou akorát potkáváme jeden jez s větším válcem. Jede ho jenom Ježura, ale dá se to docela v pohodě. Asi 5km je řeka docela poklidná, max WW3. Potom míjíme betonový most, za kterým je vlevo sesutej svah / štěrkovna. Tady začíná mít řeka výraznější spád, za tohodle vodního stavu WW4. Následují relativně kontinuální 3km, ale není tu nic záludnýho. Akorát je potřeba znát vysedačku, lávka, kterou uvádějí kilometráže, už na vysedačce není. Navíc u vysedačky se řeka nabírá na obtížnosti a pokračuje do kaňonu WW5, takže je potřeba zastavit včas. Kaňon lehce prohlížíme z vysokýho lanovýho mostu a vypadá to fakt hezky, ale za týhle vody je to strašně nakoupený.
+
+
+\info[Lonza]{15.8.}{odhadem $15m^3/s$}
+\usek[nad vesnicí Willer $N46.40792^\circ~E7.795144^\circ$]{na přehradě}
+
+Jedeme dopoledne, ale vody to má docela dost. Je to hodně kontinuální úsek bez vracáků, WW4. Nejtěžší místo je kousek za nasedačkou za betonovym mostem, kde je to trochu víc z kopce. Na tuhle řeku docela sedí popis z DKV. Jedeme to jinak všechno v pohodě, společně s přepádlováním přehrady asi 25 min.
+
+
+\info[Rhona]{15.8.}{$115m^3/s$ Brig}
+\usek[kemp Grafschaft $N46.4553836^\circ~E8.225618^\circ$]{nádraží naproti Mühlbachu $N46.411470^\circ~E8.154963^\circ$}
+
+Jedeme docela big water úsek na Rhoně, je pekelný vedro a jedeme odpoledne, takže to má celkem nakoupeno. Předem ze silnice prohlížíme dvě největší peřeje, ale zbytek vypadá OK. Po nasednutí je to celý trochu větší, než se zdálo ze silnice, je to big water 4+, dvě největší peřeje jsou za 5. Peřeje kolem kempu, než se dojede k mostu, jsou docela velký, místy jsou válce, který je opravdu vhodný objet. Potom za silničním mostem následuje první velká peřej, najíždíme úplně vlevo podél břehu, hned za nájezdem jedeme těžce do prava, dole je masivní válec vlevo, kterej je potřeba minout. Reálná lajna je i těsně vlevo podél břehu, kde válec pouští - tu jede Ježura. Šuhy přenáší, my jedeme na pohodu. Po pár set metrech je druhá větší peřej, najíždíme středem, potom je potřeba je těsně kolem levýho břehu přes jazyk, kterej objíždí válec, hned potom se jede do prava, minout zatopenej šutr a potom boof přes poslední válec, kterej už je docela v pohodě. Potom následujou dva takový stupně, oba jedeme u levý strany, vpravo sou mocný válce. Potom sou pořád docela mocný peřeje, je to hodně kontinuální WW4 až do vesnice Mörell / Fillet, kde se to zklidňuje a obtížnost o stupeň klesá. Na konci vesnice je jez / přehrada, přenášíme těsně nad hranou jezu u levý strany, za větší vody bych tam ale určitě nejezdil. Zbytek až na vysedačku je docela v pohodě, asi 500m před vysedačkou je stupeň s válcem, kterej je nutný naboofnout. Je to ale označený cedulí na břehu.Vysedá se na pravý straně pod silničním mostem. Jedeme asi 2 hodiny s prohlíženim a jištěním první velký peřeje.
+
+
+\info[Rhona]{15.8.}{asi $250m^3/s$}
+\usek[pod přehradou Leuk $N46.311472^\circ~E7.633883^\circ$]{most Sierre}
+
+Je to fakt mocná big water záležitost. Peřej pod přehradou je WW5+, za týhle vody je první půlka peřeje úplně brutální, sou tam dva mocný válce asi 2m vysoký, potom následuje pole zalitejch šutrů, který se nedá načíst. Nasedáme až na spodku peřeje, kde sou masivní vlny, ale nic dramatickýho. Konec peřeje dojíždíme v pohodě, postupně se to zklidňuje, je to takový WW3 s velkejma vlnama, jedeme asi 4km. Na konci za mostem je super velká vlna, mít s sebou rodeovku, bylo by to fakt super.
+
+\cara
+
+Spíme na pěknym místě, kousek od nasedačky přes silnici $N46.308617^\circ~E7.633147^\circ$, je tu i pitná voda.
+
+
+\info[Rhona]{16.8.}{$120m^3/s$ Brig}
+\usek[Grengios kemp]{Natters silniční most}
+
+Ráno dáváme druhej run. Jde to docela pěkně od ruky až k druhý peřeje, kde se Šuhy zvrhá v nájezdu, nezvedá včas a celou peřej proplave hlavou dolu, na konci krysí. Ježura ho rychle dostane na levej břeh, já se vydávám za lodí. Docela to teče a udělat s tou lodí něco kloudnýho moc nejde, nakonec se mi jí podaří cca po 15min natlačit ke břehu, kde se zachytne na kamenech. S Ježurou jí vylejváme a přetaháváme na pravej břeh, kde nás po chvíli kluci naberou a jedeme pro Šuhyho. Ten je na druhym břehu a nemůže pryč. Chceme mu na házečce přetáhnout loď, aby to dojel, ale už se mu do lodi za žádnou cenu nechce. Nakonec slanim kousek ze silnice k řece, kde se ho pokoušim přetáhnout na házečce. Neni to vůbec dobrej nápad, házečku neudržim, i když je přes smyci zaháklá na kameni, tak něco povoluje a Šuhy odplavává i s házečkou. Naštěstí je u něj Ježura, pomáhá mu dostat se ke břehu, odkud už se Šuhy nějak vyškrábe na silnici. My s Ježurou dojíždíme v klidu na vysedačku.
+
+
+\info[Drance]{16.8.}{spodní limit}
+\usek[Orsieres pod jezem]{Někde v půlce}
+
+Je to hrozná jebačka, vysedáme asi v půlce. Kdyby to mělo nakoupeno, bylo by to slušný WW4, hlavně na začátku ve vesnici je to docela z kopce, je tam několik skoků do 1m.
+
+\cara
+
+Spíme na štěrkovišti u řeky $N46.081792^\circ~E7.099270^\circ$.
+
+\info[Dora Baltea]{17.8.}{$40+m^3/s$ odhadem, vysoký stav}
+\usek[most nad Pré-Saint-Didier $N45^\circ46.105 E6^\circ58.881$]{most Morgex $N45^\circ45.4896' E7^\circ1.7592$}
+
+Přejíždíme na Doru Balteu. Má to na pohled docela dost vody, ale to se od ledovcovky v létě očekává. Možná je trochu zvláštní, že je slyšet, jak se po dně valí šutry, ale to nás nerozhodí. Hned na nasedačce zjišťujeme, že je to dost z kopce a celkem to valí. První peřej za nasedačkou je asi lepší jet spíš u pravý strany. Potom až k dalšímu silničnímu mostu (400m) jedeme v pohodě na oči, pak prohlížíme. Je tam docela zablokovaná peřej, nejlepší lajna je u pravýho břehu a potom na střed. Další větší peřej opět prohlížíme, jede se ze středu doleva, pod mostem se jede u levý strany, za mostem se přejíždí zpátky na pravej střed. Hned po 100m je další most, kde opět prohlížíme. Čekáme na Kubu dost dlouho, prohlížel delší úsek. Najíždíme do vracáku u pravý strany na soutoku s nějakym potokem, potom se jede přes práh u vodočtu úplně u pravý strany, pokračuje se vpravo, dokud se nemine zprava šutr, za kterym je slušnej válec. Potom se jede na střed. Dál už je to trochu přehlednější a jedeme na oči. Je tam eště několik míst se solidníma válcema, ale dá se to objet / projet. Vysedáme ve vesnici Morgex na levym břehu u raftovýho centra. S prohlížením jedeme hodinu a čtvrt, dalo by se to dát za 30min.
+
+\cara
+Jedeme se podívat na Grand Eyviu, kde potkáváme Slávoše s Pražákama. Takhle odpoledne už to má docela slušně nakoupeno, takže to necháváme na ráno. Jedeme ještě na jednodušší raftovej úsek Dory.
+
+
+\info[Dora Baltea]{17.8.}{vyšší stav}
+\usek[pod Inferno kaňonem $N45.703994^\circ~E7.154570^\circ$]{Chavonne$N45.702905^\circ~E7.217788^\circ$}
+
+Jedeme raftovej úsek, má to docela dost vody, takže je to hezký na zablbnutí, ale nic těžkýho. Já pendluju, ale nakonec se to všem docela líbí, tak dáváme druhej run, na kterej se přidám.
+
+\cara
+
+Spíme u Grand Eyvii na docela hezkym místě u cesty do lomu nad vodopádem $N45.644917^\circ~E7.274043^\circ$.
+
+
+\info[Grand Eyvia]{17.8.}{střední stav, asi $33cm$ na vodočtu Cretaz}
+\usek[Cretaz $N45.614506^\circ, E7.341663^\circ$]{Jez $N45.644914^\circ~E7.287377^\circ$}
+
+Na nasedačce to vypadá, že to nemá moc vody, ale je to docela pohodovej střední stav. Po asi 500m se dojede do malýho kaňonu, kde jsou dvě výraznější peřeje. První je rozbitej slajdík, kterej se jede středem a pak stupeň s velkym bublákem vpravo, jede se vlevo. Pak je druhej stupeň ten se jede naopak ze středu doprava. Na konci kaňonu je vpravo jeskyně, která tvoří pekelnej sifon. Za týhle vody tam skoro nic neteče, ale za větší vody by si to chtělo dát pozor. Potom je nudnější rozlitej úsek, kterej se asi po 1km začne postupně zužovat a nabírá to spád. Je to docela hezkej úsek, nic zákeřnýho, všechno se dá jet na oči. Nejtěžší část je u konce. Za silničním mostem řeka nabere spád a je těžší, nejtěžších je posledních 300m mezi silniční galerií a vysedačkou. Je tu jeden cca 3m skok, kterej je dobrý prohlídnout, ale je v pohodě. Potom je takovej nepřehlednej úsek, kterej jedem u levý strany, jsou tu asi 2 docela solidní válce. Na konci těsně před vysedačkou jsou dva stupně s válcema. Oba se daj projet docela v pohodě, ale kousek pod nima je jez, kde de voda pod vratama, takže to chce jet opatrně. Za větší vody by tam mohly bejt poměrně solidní válce. 
+
+Za týhle střední vody de přes hranu jezu jenom naprostý minimum vody, ale vrata na jezu sou pohyblivý, takže to neni úplně spolehlivej údaj.
+
+Líbí se nám to, tak jedeme eště druhej run. Potom ještě jednou dáváme raftovej úsek na Doře, ale voda je výrazně nižší než předchozí den a je to docela nuda.
+
+\cara
+
+Odpoledne dáváme přejezd směrem na Inn. Jedeme po trase Aosta - Biella - Corte - Como - St. Moritz. Cesta je to neskutečně pekelná, v Itálii je to celý jedna velká vesnice, cestou jedem asi přes milión kruháčů. Pokud bych tu měl někdy jet znovu, tak jedině po dálnici, objíždět se to rozhodně nevyplatí. Na Inn dorážíme asi v půl třetí ráno.
+
+
+\info[Inn]{13.8.}{$25m^3/s$ Tarasp}
+\usek{Giarsun + Ardez}
+
+Na závěr dáváme Inny, neni žádná velká voda, ale je to zábava :) Za cestu předjíždíme 5 jinejch part, je to tu jak na Vltavě. Pak už to jenom pálíme domu, cca v 10 dojíždíme do Budějc.
+
+
+\end{document}.
