post-review fixes

--- a/voda.tex
+++ b/voda.tex
@@ -63,7 +63,7 @@
 %\newcommand{\mygls}[1]{\ifglsentryexists{#1}{\gls{#1}}{\newterm{#1}\gls{#1}}}
 
 \newcommand*{\info[3]}{%
-	\vspace{1.5em}\hspace{-.5em}\begin{tabularx}{0.6\textwidth}{X | l X}%
+	\vspace{1.5em}\hspace{-.5em}\begin{tabularx}{0.9\textwidth}{X | l X}%
 	\parbox[c]{\hsize}{\reka{\mygls{#1}}} & #2 & \textcolor{blue!40!black}{#3} \\%
 	\end{tabularx}%
 }
@@ -746,10 +746,14 @@ Odpoledne dáváme přejezd směrem na Inn. Jedeme po trase Aosta - Biella - Cor
 
 Na závěr dáváme Inny, neni žádná velká voda, ale je to zábava :) Za cestu předjíždíme 5 jinejch part, je to tu jak na Vltavě. Pak už to jenom pálíme domu, cca v 10 dojíždíme do Budějc.
 
+\newpage
+
 \akce{Čerťáky}
 \datum[22.8. - 23.8.]
 
-Dorážim až v pátek večer. V sobotu jedeme 4 jízdy, v neděli 2, protože vyrážíme do Budějc přebalit se do našeho auta a vyrážíme na Isel.
+Dorážim až v pátek večer. V sobotu jedeme 4 jízdy, v neděli jen 2, protože vyrážíme do Budějc přebalit se do našeho auta a vyrážíme na Isel.
+
+Docela vydařená akce, vypustili letos 21 kubíků a je to docela znát, pěkná voda. Žádný drama se letos nekoná, největší peklo je vlak. Te sme si sice zaplatili (200Kč), takže jezdí častějc, ale nemá to valnej význam, protože jízdní řád se nestíhá a už tak 3. vlak jede úplně mimo stanovenej čas. Navíc jsou tam jenom tradiční 2 vagóny, takže je to peklo se tam narvat a stejně se tam občas někdo nevejde. N ato jak slibovali zajištěnou dopravu, tak je to bída.
 
 \akce{Tyrolsko}
 \datum[24.8. - 30.8.]
@@ -800,10 +804,12 @@ Odpoledne jedeme na tunel. V první větší peřeji je strom napříč celou ř
 Nasedáme pod přehradou, stav je standardní, možná o maličko víc, než minule. První kilák až k nejtěžšímu kaňonu jedeme na pohodu bez většího prohlížení asi 30min. Nejtěžší místo jedeme jenom já s Kubou, oba docela na pohodu, když se dobře najede ten boof, tak už to člověka nějak vypláchne. Pokračujeme v podobnym tempu, v jednom hodně kamenitym místě se Petra hodně nepěkne zašprajcne mezi dva šutry a máčkne jí to pod vodu, naštěstí zůstane hlavou nad vodou. Po chvilce sem u ní a daří se mi jí vytáhnout. Je v pohodě, asi si pořádně neuvědomila, jak hodně blbá situace to byla. Potom už pokračujeme v poklidu až k mostu pod hradem, kde vystupuje Kuba a vrací se pro auto. My pokračujeme dál, řeka se postupně zklidňuje z WW3 na 1-2. Do Brixenu dojíždíme za 3 hodiny, jsme tam o trochu dřív, než Kuba. U hradu je to prej s lodí docela výšlap, prý je to snad lepší dojet.
 
 
-\info[Boite]{28.8.}{vyšší střední, $7-12,m^3/s$}
+\info[Boite]{28.8.}{vyšší střední, $7-12m^3/s$}
 \usek{Mezi přehradama}
 
-Spíme na Boite někde u vesnice San Vito $46.477352^\circ N~12.193614^\circ E$ (konec horního úseku). Ráno jedeme kaňon mezi přehradama. Trochu nám dá zabrat najít vysedačku, nakonec se rozhodneme dojet až na přehradu, neni moc dlouhá. Nevíme jakej máme stav, ale určitě víc než minimálních 5 kubíků, tak se do toho pouštíme (ale radši bez Petry). Celkem brzo zjišťujeme, že máme takovou vyšší střední vodu. První zajímavý místo je asi 2m šikmej drop s válcem, trochu v něm svíčkujeme, ale všichni to dáme docela v pohodě. Potom začíná bejt řeka trochu víc z kopce a kontinuální, neni to žádný drama, ale na zastavování tam moc prostoru neni. Hned pár set metrů pod dropem je strom přes celou řeku, kterej přenášíme zprava. Potom přijíždíme k nepřeheldnýmu zavalenýmu místu, Kuba se ho snaží prohlídnout zleva, ale moc tam nevidí (při tom mu málem odplave loď, což by byl strašnej průser). Nakonec se mi podaří vystoupit vpravo a kouknout na to, je to docela v pohodě, jedeme celý zprava. Následuje několik set metrů v parádnim úzkym kaňonu bez větších peřejí, potom je další zavalená peřej. Prohlížíme z leva. Na konci je strom, ale je dostatečně nad vodou, aby se dal podjet. Místo najíždíme zleva, potom je cca 1m drop, jedeme u pravýho břehu, hned za nim je potřeba se sbalit pod strom. Následující větší peřej je u silničního mostu, je to takovej úzkej kanál u levýho břehu. V nájezdu má poměrně masivní válec, hned za tim kouká z vody takový žebro, kolem kterýho to padá do dalšího válce. Je to jetelný, ale válce sou hodně velký a eskymovat by tam člověk určitě nechtěl, je to hodně úzký. Nakonec se neodhodláme a přenášíme. Následuje ještě cca 1km větších peřejí, ale prohlížíme už jen zběžně, je to docela přehledný. Poslední asi 1km už je jenom dojezd do přehrady, vysedáme vlevo 100m před hrází u nějakýho přítoku.
+Spíme na Boite někde u vesnice San Vito $46.477352^\circ N~12.193614^\circ E$ (konec horního úseku).
+
+ Ráno jedeme kaňon mezi přehradama. Trochu nám dá zabrat najít vysedačku, nakonec se rozhodneme dojet až na přehradu, neni moc dlouhá. Nevíme jakej máme stav, ale určitě víc než minimálních 5 kubíků, tak se do toho pouštíme (ale radši bez Petry). Celkem brzo zjišťujeme, že máme takovou vyšší střední vodu. První zajímavý místo je asi 2m šikmej drop s válcem, trochu v něm svíčkujeme, ale všichni to dáme docela v pohodě. Potom začíná bejt řeka trochu víc z kopce a kontinuální, neni to žádný drama, ale na zastavování tam moc prostoru neni. Hned pár set metrů pod dropem je strom přes celou řeku, kterej přenášíme zprava. Potom přijíždíme k nepřeheldnýmu zavalenýmu místu, Kuba se ho snaží prohlídnout zleva, ale moc tam nevidí (při tom mu málem odplave loď, což by byl strašnej průser). Nakonec se mi podaří vystoupit vpravo a kouknout na to, je to docela v pohodě, jedeme celý zprava. Následuje několik set metrů v parádnim úzkym kaňonu bez větších peřejí, potom je další zavalená peřej. Prohlížíme z leva. Na konci je strom, ale je dostatečně nad vodou, aby se dal podjet. Místo najíždíme zleva, potom je cca 1m drop, jedeme u pravýho břehu, hned za nim je potřeba se sbalit pod strom. Následující větší peřej je u silničního mostu, je to takovej úzkej kanál u levýho břehu. V nájezdu má poměrně masivní válec, hned za tim kouká z vody takový žebro, kolem kterýho to padá do dalšího válce. Je to jetelný, ale válce sou hodně velký a eskymovat by tam člověk určitě nechtěl, je to hodně úzký. Nakonec se neodhodláme a přenášíme. Následuje ještě cca 1km větších peřejí, ale prohlížíme už jen zběžně, je to docela přehledný. Poslední asi 1km už je jenom dojezd do přehrady, vysedáme vlevo 100m před hrází u nějakýho přítoku.
 
 Za zmínku stojí, že jsme nasedali odhadem za 7-8 kubíků a dojížděli jsme možná za 12ti. Přijde mi, že to nebylo jenom z přítoků, ale že spíš přehrada připustila. Ale těžko hádat. Rozhodně je dobrý brát to v úvahu, celej úsek je v kaňonu a výstup by byl extrémně složitej až nereálnej. Pozor je potřeba dát na stromy, bylo jich tam opravdu hodně, i když většina šla objet. Celkově bych to zhodnotil jako WW4 - 4+. Ale řeka je to super, nádhernej kaňon, neni to nijak extra těžký, mít čas, určitě bych to dal po druhý. Jeli jsme to necelý 3 hodiny.
 
