--- a/voda.tex
+++ b/voda.tex
@@ -805,7 +805,7 @@ Nasedáme pod přehradou, stav je standardní, možná o maličko víc, než min
 
 
 \info[Boite]{28.8.}{vyšší střední, $7-12m^3/s$}
-\usek{Mezi přehradama}
+\usek[Most pod přehradou $46.416403^\circ N~12.243891^\circ E$]{Na druhý přehradě $46.413055^\circ N~12.318039^\circ E$}
 
 Spíme na Boite někde u vesnice San Vito $46.477352^\circ N~12.193614^\circ E$ (konec horního úseku).
 
@@ -841,6 +841,78 @@ Jedeme asi $3\times$ s pendlem a vyrážíme domu.
 
 \cara
 Schytáme ještě super objížďku kolem Zell am See (neni značená a musíme se vrátit do Mittersilu a jet přes Kitzbühl - wtf) ale domu dorážíme docela rozumně. Najeli sme cca jenom 1700km a vyšlo nás to na závratných 2300 na osobu. Super akce.
+
+
+\akce{Podzimní Ötz}
+\datum[19.9. - 20.9.]
+
+
+\info[Otz]{19.9.}{$190cm$ Tumpen}
+\usek{Lesní}
+
+Na rozjetí dáváme lesní, ale je to docela bída, vody fakt málo.
+
+
+\info[Venter Ache]{20.9.}{$190cm$ Tumpen}
+\usek{Spodní}
+
+Pak jedem $2\times$ spodní Venter, neni moc vody, ale je to celkem v pohodě poklidný poježdění.
+
+
+\info[Otz]{19.9.}{$188cm$ Tumpen}
+\usek{Mezimostí}
+
+Odpoledne se připojuju na mezimostí s Ivošem a Kubou Weislem. Vstupenka se dá jet středem, nemusíme úplně vpravo. Tradičně je dole strom. Ivoš nechytá vracák a propadá někudy středem, ale na štěstí v pohodě.Až k prvnímu mostu docela v pohodě, akorát těsně před mostem mě to rozhodí a musim jet úplně doprava. Před druhym mostem trochu svícuju, ale v pohodě. Ke konci už sem celkem unavenej, protože jedeme skoro bez zastávky, zbytečně $2\times$ eskymuju, ale na pohodu. Vystupuju u mostu, kluci pokračujou Köfelsem.
+
+
+\info[Venter Ache]{20.9.}{$190cm$ Tumpen}
+\usek{Spodní}
+
+V neděli dáváme 2 rychlý jízdy a vyrážíme včas domu. První jízdu sme našli Toro Kuby Suchýho, který mu uplavalo den předem na Heiligu.
+
+
+\akce{Podzimní Isel}
+\datum[26.9. - 28.9.]
+
+Prodlouženej víkend na Iselu s budějčákama, je nás 10, 2 auta.
+
+
+\info[Isel]{26.9.}{$80cm$ Hinterbichl}
+\usek{Virgen}
+
+Máme spodní limit, ale jetelný to docela je. První větší peřej je hned za prvním mostem, nejlepší lajna je středem přes šikmou desku, pak se jede k levýmu břehu a pokračuje se dál s vodou. Za další zatáčkou je druhá větší peřej, za tohodle stavu je to místy trochu jebačka, jedu celý středem, ale lepší lajna je asi u levý strany. Potom je několk set metrů klidnější úsek na oči, je tu jeden asi metrovej drop, kterej se najíždí zprava na střed a potom boof přes šutr. Další tšžší místo je levá zatáčka, která končí v malym kaňonu. V nájezdu je šikmá šupna s několikametrovym převýšenim, potom 2 menší dropíky, který se jedou u pravý strany okolo napadanejch kmenů. Do kaňonu neni za zatáčku vidět a prohlížení / přenášení je hodně složitý. Naštěst kaňon je krátkej a dá se tam trochu nakouknout z vracáku vpravo. Na začátku sejede podél sklaního žebra středem přes válec, potom se to celý jede přes pravej střed přes dva válce. Za větší vody by tu mohly bejt hodně přísný válce.
+
+Potom následuje jednodušší úsek, cca 1km, kterej se dá jet v klidu na oči. Ke konci úseku je most, pak se ještě kus jede, v pravý zatáčce je pak jedna větší peřej, která se jede, ale pod ní je potřeba zastavit. Následující peřej má hodně velkej spád a je hodně zablokovaná. Za týhle vody je to nejetelný, za větší by to možná šlo. Přenášíme vlevo a jedem jenom spodní část peřeje. Já v nájezdu beru šutr, rozhodí mě to, pak mě to bokem namáčkne na větev a nakonec eskymuju, takže pekelná lajna, ale naštěstí v pohodě. Potom je eště docela hezkej úsek jetelnej na oči, kterej postupně zvolňuje. Vysedáme na parkovišti před Matrei.
+
+Rozhodně bych tu nechtěl mít míň vody, je to jetelný, ale docela jebačka. Dobrej pohodovej stav by moh bejt tak 85 - 90cm. S prohlíženim a přenášením jedeme necelý 3 hodiny.
+\cara
+Přejíždíme na Tauernbach, kde si procházíme Prosseggklamm a spíme u Tauernbachu kousek na nasedačkou.
+
+
+\info[Tauernbach]{27.9.}{$146cm$ Prossegg}
+\usek{Prosseggklamm}
+
+Ráno vyrážíme jenom s Ondrou a Šafim. Nasedačka je pod první pekelnou peřejí, schází se tam korytem potoka. V prvním kaňonu jsou dva dropy, první jenom takovej malej šikmej, jede se středem. Druhej je vyšší (2m+) a neni tak čistej. Neni úplně kolmej, je potřeba ho najet zleva do prava na levej boof a pravej náklon. Pod nim to žene na skály vlevo. Já mjedu s trochu blbym náklonem a zvrhá mě to doleva na skály, ale po chvilce vyzvedám těsně nad dalšim válečkem. Ondra najíždí v pohodě, Šafi se ale taky zvrhá a nakonec plave. Naštěstí se dá v klidu vylezt vpravo na konci kaňonu. Loď plave, tak jedeme za ní. Následující drop hned za kaňonem je asi nejstrašidelnější, je potřeba ho jet hodně vlevo. Nedá se tu ale nic moc vymejšlet, všechno odtejká a je docela na pohodu. Potom je tam ještě jeden asi 2m drop, jede se hodně vlevo po šikmý šupně, ale je potřeba jet hodně do prava, vlevo dole sou šutry. Tady i chytáme loď, ale má díru na špičce a Šafi tu končí. Kaňon doporučuju určitě prohlídnout z mostu a k posledním dvoum dropům se dá dojít až k vodě.
+
+My s Ondrou pokračujeme dál. Po pár set metrech je první větší peřej (je vidět ze shora z cesty). Najíždí se boofem ze středu do prava, potom se jede pravej střed přes dva válce a končí se prudkou pravou zatáčkou s válcem, ale neni to žádný drama. Po pár set metrech je další peřej, která neni vidět z cesty. Jesou to takový žebra v řece, jede se to celý pravej střed a nakonci na středu boofem přes šutr. Ze břehu to vypadá dost šutrovatě, ale je to na pohodu, oba dáváme v pohodě. Hned za tim následuje hodně zablokovanej drop, jedeme vpravo mezi 2ma kickerama, lajna vypadá trochu strašidelně, ale nakonec je to úplně hladkej průjezd, je tam dost místa. Poslední peřej je opět vidět z cesty ze shora, jede se celá u levý strany, potom asi 1m boof přes placák úplně vlevo. Za nim jedeme úplně doprava ke skále a potom přes malej šikmej šutr. Dál už jedeme na oči až k vysedačce, neni tu nic záludnýho. Vysedá se před ohromnym šutrem na pravym břehu, hned za tim následuje strašná smrt, vysedačku je určitě nutný prohlídnout předem. Odtud je potřeba vylezt nahoru na cestu a pěšky zpátky (15min) na nasedačku. S prohlíženim jedeme 40min.
+
+Je to super úsek, měli sme spíš spodní limit, optimum by bylo tak 155cm, za větší vody by to asi dost sypalo a nesměl by tam nikdo zaplavat. Za projití stojí určitě i poslední kilometr kaňonu, kde to padá o několik set vejškovejch metrů v nádherný krajině.
+
+
+\info[Defereggenbach]{27.9.}{$45cm$ Hopfgarten}
+\usek{Wasserfallstrecke}
+
+Odpoledne dáváme Defe. Začátek je klasická jebačka, ale vodopády super. Jede nás 9, takže neni nouze o dobrý lajny ani o carnage. Dobrej byl Ondra, na prvnim dropu mu zmizela půlka lodi v undercutu vlevo, ale vymotal se z toho v pohodě. Pete předvádí lajnu úplně vlevo po skále, takže se úplně vyhne válci. Kupodivu je to celkem v pohodě. Jede týpek zvedá ve válci v nájezdu a pak zůstává ve válci pod dropem a plave. Já najíždím vstup i válec úplně v pohodě, ale končim víc vlevo než bych chtěl, tak si dávám špičku doprava na overboof. Dávám ale čelo a padnu tam dost bokem a zůstávám ve válci pod dropem. Zvedá se tu dost blbě, je to hodně propěněný. Rozhodně mě to jen tak nepustí, ale nebojuju dlouho a pustí mě to, pod tim v klidu vyzvedám.
+
+Druhej drop najíždí víceméně všichni v pohodě, někdo jedena přímo, někdo přes pravej vracák, obě varianty v pohodě. Já dávám super boof úplně na placku, docela mě překvapuje, že dopad v zádech docela cejtim. Největší vzrušení je Pete, kterej z prdele zahazuje pádlo, ale rukama nezvedne.
+
+Jedeme až dolu do vesnice, poslední kaňonek mě překvapuje, je tu eště jeden 1.5m super šikmej drop, potom jedna šikamá plotna s válcem. Poslední místo, kde bejval sifon, je úplně čistý, jede se úzkym průzkokem vlevo. Pak už tam nic neni.
+
+
+\info[Saalach]{28.9.}{$22cm$ Unterjettenberg}
+\usek{Lofer}
+
+Cestou domu jedeme Lofer, je málo vody, ale je to docela zábavný. Trojkombo je na pohodu, zbytek dáváme vtipný lajny různě mezi šutrama. Všichni jedeme na pohodu. Smutný je, že den předem se tu utopil nějakej Čech.
 
 
 \end{document}.
