--- a/voda.tex
+++ b/voda.tex
@@ -916,4 +916,43 @@ Jedeme až dolu do vesnice, poslední kaňonek mě překvapuje, je tu eště jed
 Cestou domu jedeme Lofer, je málo vody, ale je to pořád zábavný. Trojkombo je na pohodu, zbytek dáváme vtipný lajny různě mezi šutrama. Všichni jedeme na pohodu. Smutný je, že den předem se tu utopil nějakej Čech.
 
 
+\akce{Podzimní Čerťáky}
+\datum[7.11.]
+
+\info[Vltava]{7.11.}{$6m^3/s$}
+\usek{Čerťáky}
+
+Z nějakýho důvodu několik dní teče 6 kubíků na čerťácich. Přidávám se k Ježurovi, kterej jede s Ivošem a hromadou dalších lidí. Jedeme to celý od hráze, je to celkem v pohodě, lepší, než bych čekal. Přenášíme okno a škvíru, zbytek jedeme. Schody si $2\times$ vyneseme, jinak jedeme jenom jednou. Na dvě jízdy to neni, ale určitě to za to stálo.
+
+
+\akce{Stubai}
+\datum[14. - 17.11.]
+
+\info[Inn]{17.11.}{$206cm Magerbach$}
+\usek{Imster}
+
+Lyžovačku sme spojiili se svátečnim Innem. Je málo vody, ale pohodový podzimní zapádlování.
+
+
+\akce{Jizerky}
+\datum[20.11.]
+
+Teče to! Vyrážíme ráno v 7 (resp. 7:45, když dorazí experti) z Tróji s Ježurou a Patem. Já sem docela nastydlej, ale když to teče, nedá se svítit...
+
+\info[Jizerka]{20.11.}{$4.1m^3/s,~resp.~30m^3/s~Jizera$}
+\usek{Na mejto}
+
+Docela dobrej stav, ale sneslo by to i o trochu víc. Přidáváme se k pražákům, takže nám to tak nějak najedou a jedem to celý na oči. Je to docela z kopce, ale všechno docela v pohodě, nikde tam neni moc co vymejšlet. Cca v půlce Jizerky je strom, kterej se musí objíždět úplně u pravýho břehu a z vody je vidět až na poslední chvíli.
+
+Jizera by taky snesla o trochu víc, ale je to v pohodě. Zas to jedem celý na oči, pár peřejí nám kluci popíšou, ale je to celkem v pohodě, tý vody neni tolik. Peřej pod železničnim mostem jedem celou zleva. Peřej, kde sem minule kempil na šutru najíždíme úplně zprava a za prvnim šutrem doleva, tentokrát najíždim na pohodu. Cutisin jedeme dámskou lajnou úplně vlevo. Dalo by se to, ale nechce se mi tam :) Druhou jízdu se nám dát nechce, já sem polomrtvej a Pat toho má docela dost, takže dáváme Mumlavku.
+
+
+\info[Mumlava]{20.11.}{$7m^3/s$}
+\usek{Do Vilémova}
+
+Mumlava nemá nijak extra vody, ale celý je to na pohodu sjízdný, žádný drama. V podkově dávám dobrý čelo do šutrů vpravo, ale já jí nikdy neumim najet normálně... Dáváme to až do Vilémova, pohodový svezení, Jizera má pořád cca. 30 kubíků. Ostrov dáváme vpravo na pohodu, strom co tam je, je pod vodou.
+
+\cara
+Ježura pak ještě s týpkem z Jablonce dává Kamenici, mě už se nechce. Do Prahy dorážíme cca v 7, takže po chvíli vyrážim na Hospitality. Celkově bych to zhodnotil jako kvalitní pátek :) 
+
 \end{document}.
