--- a/voda.tex
+++ b/voda.tex
@@ -955,4 +955,21 @@ Mumlava nemá nijak extra vody, ale celý je to na pohodu sjízdný, žádný dr
 \cara
 Ježura pak ještě s týpkem z Jablonce dává Kamenici, mě už se nechce. Do Prahy dorážíme cca v 7, takže po chvíli vyrážim na Hospitality. Celkově bych to zhodnotil jako kvalitní pátek :) 
 
+
+
+\rok{2016}
+\akce{Čerťáky tečou}
+\datum[20.2. - 21.2.]
+
+\info[Vltava]{20.2.}{$10m^3/s$}
+\usek{Čerťáky}
+
+Jedeme se Štěpánem a Pavlem, dáváme jednu jízdu + $3\times$ schody. Je cca kolem nuly, ale neni to žádný drama. Je to znatelně lepší než za 6ti kubíků, pohodový poježdění. Pavel zaplave v undercutu na pravý straně pod první delší peřejí pod oknem. Vyleze sice rychle, ale je docela zmrzlej. Jinak v pohodě, schody párkrát otočíme a jedeme do tepla.
+
+
+\info[Vltava]{21.2.}{$10m^3/s$}
+\usek{Čerťáky}
+
+Jedem už jenom se Štěpánem, ráno dáváme rychlou jízdu a uvažujem, jestli nepřejedem někam do Rakouska, ale i přes déšť ta nic moc nenastoupalo. Tak dáme spodek ještě jednou, $4\times$ otočíme schody. Je o pár stupňů teplejc, takže pohodička.
+
 \end{document}.
